# obsidian-rag

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: mcp-migration.md  runbook.md
openspec/changes/add-text-file-ingestion/: design.md  proposal.md  tasks.md
openspec/changes/consolidate-watch-root-config/: design.md  proposal.md  tasks.md
openspec/changes/linux-first-and-image-folder-ingestion/: design.md  proposal.md
openspec/changes/remove-update-markdown-note-tool/: design.md  proposal.md  tasks.md
openspec/specs/api-only-inference-runtime/: spec.md
openspec/specs/image-folder-knowledge-generation/: spec.md
openspec/specs/linux-runtime-and-ops/: spec.md
openspec/specs/operational-logging-and-failure-observability/: spec.md
scripts/: obrag-background.service.example  register-startup-task.ps1  total-recall-background.service.example
src/obsidian_rag_mcp/: config.py  download_cohere-transcribe-03-2026.py
src/obsidian_rag_mcp/background_worker/: audio_pipeline.py  image_folder_pipeline.py  llm_runtime.py  page_document_pipeline.py  pdf_pipeline.py  service.py  (+4 more)
src/total_recall/: __init__.py  cli.py  config.py  models.py
tests/integration/: test_audio_flow.py  test_image_folder_flow.py  test_mcp_flows.py  test_mcp_note_update.py  test_mcp_protocol_server.py  test_path_safety.py  test_pdf_flow.py  test_pdf_temp_cleanup.py  test_text_flow.py
tests/unit/: test_chunking.py  test_config_defaults.py  test_idempotency.py  test_image_folder_watchers.py  test_logging_behavior.py  test_manifest.py  test_retrieval.py  test_text_watchers.py
(+54 files in other folders)
