[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "total-recall"
version = "0.1.0"
description = "RAG-based MCP tooling for an Obsidian vault"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "numpy>=1.26",
  "watchdog>=4.0",
  "pypdfium2>=4.30",
  "PyYAML>=6.0",
  "mcp>=1.0",
  "openai",
  "pillow>=12.2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]

[project.scripts]
total-recall-background = "total_recall.cli:run_background"
total-recall-server = "total_recall.cli:run_mcp_server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
